fix scrolling when showing filters on mobile

--- a/src/components/filter/index.css
+++ b/src/components/filter/index.css
@@ -2,16 +2,15 @@
 .filter-wrapper {
     left: 0;
     line-height: 24px;
-    max-height: 0px;
     overflow: hidden;
     padding: 0;
     position: fixed;
     right: 0;
     top: 0;
-    transition: max-height 0.3s ease;
+    transform-origin: top;
+    transform: scaleY(0);
+    transition: transform 0.26s ease;
     z-index: 1;
-    /* border-bottom: 2px solid #000;
-    box-shadow: 0px 5px 15px 5px #ccc; */
 }
 
 .filter-content-wrapper {
@@ -20,7 +19,7 @@
     flex-grow: 1;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 30px 0px;
+    padding: 30px 10px;
     position: relative;
     gap: 10px;
 }
@@ -33,7 +32,7 @@
 .filter-wrapper.open {
     box-shadow: 0px 5px 15px 5px rgba(0,0,0,0.69);
     overflow: visible;
-    max-height: var(--display-height);
+    transform: scaleY(1);
 }
 
 .filter-item {
